--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Figure&nbsp;1: Generative DAG model for the investment game showing how wealth e
 <section id="single-simulation-over-time-narrative-plot" class="level3">
 <h3 class="anchored" data-anchor-id="single-simulation-over-time-narrative-plot">2) Single Simulation Over Time (Narrative + Plot)</h3>
 <p>With an initial balance of 30k running the simulation over 75 years you can see in the plot below that the balance experiences a lot of fluctuations but the over all trend is positive. I would be happy with this simulation has its a very decent return on investment without continuing to invest.</p>
-
+<p><img src="index_files/figure-html/simulation_table.png" id="simulation1" width="458" height="166"  class="figure-img"></p>
 </section>
 <section id="simulations-distribution-of-final-balances" class="level3">
 <h3 class="anchored" data-anchor-id="simulations-distribution-of-final-balances">3) 100 Simulations: Distribution of Final Balances</h3>
